--- a/app/src/main/res/layout/fragment_doctor_home.xml
+++ b/app/src/main/res/layout/fragment_doctor_home.xml
@@ -1,19 +1,36 @@
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-  android:layout_width="match_parent"
-    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-  >
     <TextView
         android:id="@+id/textureView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/welcome_doctor"
+        android:layout_marginTop="20dp"
+        android:textSize="24sp"
+        android:textColor="@color/primary_color"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/ambulanceLottie"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Welcome Doctor!"
-        />
+        android:padding="20dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/doctor_anim"
+        tools:layout_editor_absoluteX="123dp" />
+
     <include
+        android:id="@+id/supportFabBtn"
         layout="@layout/support_fab"
-        android:id="@+id/supportFabBtn"/>
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
