--- a/app/src/main/res/layout/fragment_doctor_register.xml
+++ b/app/src/main/res/layout/fragment_doctor_register.xml
@@ -295,7 +295,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:gravity="start|top"
-                    android:hint="@string/bio"
+                    android:hint="@string/description"
                     android:inputType="textMultiLine"
                     android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -318,28 +318,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/license_number"
-                    android:inputType="text"
-                    android:textColor="@color/black" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!-- Hospital ID -->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/hospitalIdLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="30dp"
-                android:enabled="true"
-                app:boxBackgroundColor="@android:color/transparent"
-                app:boxStrokeColor="@color/colorPrimary"
-                app:boxStrokeWidth="2dp"
-                app:boxStrokeWidthFocused="1dp"
-                app:hintTextColor="@color/black">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/hospital_id"
                     android:inputType="text"
                     android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
