--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -67,7 +67,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:foreground="?android:attr/selectableItemBackground"
-                        app:cardBackgroundColor="@android:color/white"
+                        app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="16dp"
                         app:cardElevation="4dp">
 
@@ -129,7 +129,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:foreground="?android:attr/selectableItemBackground"
-                        app:cardBackgroundColor="@android:color/white"
+                        app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="16dp"
                         app:cardElevation="4dp">
 
@@ -188,7 +188,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:foreground="?android:attr/selectableItemBackground"
-                        app:cardBackgroundColor="@android:color/white"
+                        app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="16dp"
                         app:cardElevation="4dp">
 
@@ -250,7 +250,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:layout_marginTop="50dp"
-                        android:text="Save Changes"
+                        android:text="@string/save_changes"
                         app:backgroundTint="@color/colorSecondaryVariant"
                         android:textSize="18sp"
                         android:textStyle="bold"
