--- a/app/src/main/res/layout/fragment_welcome_app.xml
+++ b/app/src/main/res/layout/fragment_welcome_app.xml
@@ -1,23 +1,21 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <!-- شعار التطبيق -->
     <ImageView
         android:id="@+id/logo"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="80dp"
+        android:importantForAccessibility="no"
         android:src="@drawable/carecall_logo"
         app:layout_constraintBottom_toTopOf="@+id/title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- عنوان التطبيق -->
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
@@ -31,7 +29,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/logo" />
 
-    <!-- وصف التطبيق -->
     <TextView
         android:id="@+id/subtitle"
         android:layout_width="0dp"
@@ -39,7 +36,7 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
         android:lineSpacingExtra="4dp"
-        android:text="@string/welcome_subtitle"
+        android:text="@string/welcome"
         android:textAlignment="center"
         android:textColor="@color/text_secondary"
         android:textSize="16sp"
@@ -47,7 +44,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
-    <!-- Lottie Animation -->
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animationView"
         android:layout_width="405dp"
@@ -61,10 +57,6 @@
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/ambulance_anim" />
 
-    <!-- زر البدء -->
-
-
-    <!-- تخطي -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/getStartedButton"
         android:layout_width="0dp"
@@ -83,19 +75,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/skipText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:padding="8dp"
-        android:textStyle="bold"
-        android:text="@string/skip_for_now"
-        android:textColor="@color/text_secondary"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
