--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#ffff</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#01007F</color>
-    <color name="colorPrimaryVariant">#041631</color>
-    <color name="colorOnPrimary">#F7F7F7</color>
-    <color name="colorSecondary">#403F3F</color>
-    <color name="colorSecondaryVariant">#77818F</color>
-    <color name="colorOnSecondary">#995E5E</color>
-    <color name="colorHome">#DAE0ED</color>
+    <color name="black">#FFFFFFFF</color>
+    <color name="white">#333333</color>
+    <color name="whiteSmoke">#2C2C2C</color>
+    <color name="colorPrimary">#90CAF9</color> <!-- Light blue -->
+    <color name="colorPrimaryVariant">#64B5F6</color>
+    <color name="colorOnPrimary">#000000</color>
 
+    <color name="colorSecondary">#B0BEC5</color> <!-- Light grey -->
+    <color name="colorSecondaryVariant">#90A4AE</color>
+    <color name="colorOnSecondary">#000000</color>
 
+    <color name="colorHome">#1E1E1E</color> <!-- Dark background -->
+    <color name="red">#EF5350</color>
+    <color name="green">#66BB6A</color>
+    <color name="grey">#607D8B</color>
+
+    <color name="nile_color">#803F51B5</color> <!-- Semi-transparent dark blue -->
+    <color name="primary_dark">#121212</color>
+    <color name="primary_light">#BBDEFB</color>
+    <color name="accent">#FF4081</color>
+    <color name="background_light">#121212</color>
+    <color name="card_stroke">#333333</color>
+
+    <color name="text_primary">#FFFFFF</color>
+    <color name="text_secondary">#B0BEC5</color>
+
+    <color name="primary_color">#2196F3</color>
+    <color name="card_background">#1E1E1E</color>
+    <color name="icon_tint">#B0BEC5</color>
+
+    <color name="blood_red">#E57373</color>
+    <color name="price_green">#81C784</color>
+    <color name="error_color">#E57373</color>
+
+    <color name="status_active">#81C784</color>
+    <color name="status_pending">#FFB74D</color>
+    <color name="status_completed">#64B5F6</color>
 </resources>
